@@ -1,3 +1,4 @@
 *~
 .*
-MooseX-Event-v*
+MooseX-Event-*
+DEADJOE
