@@ -3,16 +3,33 @@ version = 0.3.0
 author  = Rebecca Turner <becca@referencethis.com>
 license = Perl_5
 copyright_holder = Rebecca Turner
-copyright_year   = 2011
+copyright_year   = 2012
+
+[MetaResources]
+bugtracker.web = https://github.com/iarna/MooseX-Event/issues
 
 [@Git]
 tag_format = v%v
 tag_message = v%v
 
-[@Basic]
+[Git::GatherDir]
+exclude_filename = dist.ini
+exclude_filename = weaver.ini
+exclude_filename = README.pod
+
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+
+[Run::AfterRelease]
+run = perldoc -d README.pod -o pod `ls -d MooseX-Event-*/|sort -r|head -1`/lib/MooseX/Event.pm
+run = git add ChangeLog README.pod
+run = git commit -m"ChangeLog from new release"
+run = git push
 
 [Prereqs]
 Any::Moose = 0
+Event::Wrappable = 0
 
 [GitHub::Update]
 metacpan = 1
@@ -28,23 +45,11 @@ time_zone=UTC
 
 [PodWeaver]
 
-[PruneFiles]
-match = ~$
-
 [InstallGuide]
 
 [Signature]
 
-[ReadmeFromPod]
-
 [NoTabsTests]
 [CheckChangeLog]
-[Test::MinimumVersion]
 [Test::Portability]
 [Test::Synopsis]
-;[CriticTests]
-
-
-;;; Remove these if you want to use dzil with this distribution and perl 5.8
-
-[Test::UnusedVars]
