@@ -1,4 +1,6 @@
 [@CorePrep]
+[-Encoding]
+encoding = utf-8
 
 [Region / Pod::Coverage]
 
@@ -29,11 +31,16 @@ command = func
 [Region / postlude]
 
 [SeeAlso]
+header =
+
+[SourceGitHub]
 
 [Support]
-websites = search
+perldoc = 0
+websites = metacpan
 repository_link=both
-
+bugs=metadata
+bugs_content=Please report any bugs at {WEB}.
 
 [Authors]
 [Generic / ACKNOWLEDGEMENTS]
